--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -27,6 +27,12 @@ here, but most should go in the L</Performance Enhancements> section.
 
 [ List each enhancement as a =head2 entry ]
 
+=head2 Regular Expression Set Operations
+
+This is an experimental feature to allow matching against the the union,
+intersection, etc., of XXX, similar to L<Unicode::Regex::Set>.  See
+L<perlre/(?[ ])>.
+
 =head1 Security
 
 XXX Any security-related notices go here.  In particular, any security
