--- a/pod/perlre.pod
+++ b/pod/perlre.pod
@@ -312,7 +312,11 @@ the pattern uses a Unicode name (C<\N{...}>);  or
 
 =item 5
 
-the pattern uses a Unicode property (C<\p{...}>)
+the pattern uses a Unicode property (C<\p{...}>); or
+
+=item 6
+
+the pattern uses L</C<(?[ ])>>
 
 =back
 
@@ -1728,6 +1732,125 @@ to inside of one of these constructs. The following equivalences apply:
     PAT++               (?>PAT+)
     PAT?+               (?>PAT?)
     PAT{min,max}+       (?>PAT{min,max})
+
+=item C<(?[ ])>
+X<set operations>
+
+This is an experimental feature present starting in 5.18, but is subject
+to change as we gain field experience with it.  Any attempt to use it
+will raise a warning, unless disabled via
+
+ no warnings "experimental::regex_sets";
+
+This is a fancy bracketed character class that can be used for more
+readable and less error-prone classes, and to perform set operations,
+such as intersection. An example is
+
+ /(?[ \p{Thai} & \p{Digit} ])/
+
+This will match all the digit characters that are in the Thai script.
+We can extend this by
+
+ /(?[ ( \p{Thai} + \p{Lao} ) & \p{Digit} ])/
+
+This matches digits that are in either the Thai or Laotion scripts.
+
+Notice the white space in these examples.  This construct always has
+L</C<E<sol>x>> turned on.
+
+The available binary operators are:
+
+ &    intersection
+ +    union
+ |    union, as well
+ -    subtraction (the 2nd set's code points are removed from
+      the first's)
+ ^    symmetric difference (the union minus the intersection)
+
+There is one unary operator:
+
+ !    complement
+
+All the binary operators left associate, and are of equal precedence.
+The unary operator has higher precedence.  Use parentheses to override
+the default ordering.
+
+The main restriction is that everything is a metacharacter.  Thus,
+you cannot refer to single characters by doing something like this:
+
+ /(?[ a + b ])/ # Syntax error!
+
+The easiest way to specify an individual typable character is to enclose
+it in brackets:
+
+ /(?[ [a] + [b] ])/
+
+(This is the same thing as C<[ab]>.)  You could also have said the equivalent
+
+ /(?[[ a b ]])/
+
+(You can, of course, specify single characters by using, C<\x{}>,
+C<\N{}>, etc.)
+
+This last example shows the use of this construct to specify an ordinary
+bracketed character class without set operations.  Note the white space
+within it.  To specify
+a matchable white space character, you can escape it with a backslash,
+like:
+
+ /(?[ [ a e i o u \  ] ])/
+
+This matches the English vowels plus the SPACE character.
+
+All warnings from these class elements are fatal, as well as some
+practices that don't currently warn.  For example you cannot say
+
+ /(?[ [ \xF ] ])/     # Syntax error!
+
+You have to have two hex digits after a braceless C<\x> (use a leading
+zero to make two).  These restrictions are to lower the incidence of
+typos causing the class to not match what you thought it would.
+
+The final difference between regular bracketed character classes and
+these, is that it is not possible to get the latter to match a
+multi-character fold.  Thus,
+
+ /(?[ [\xDF] ])/i
+
+does not match the string C<ss>.
+
+You don't have to enclose Posix class names inside double brackets.  The
+following works
+
+ /(?[ [:word:] - [:lower:] ])/
+
+C<< (?[ ]) >> is a compile-time construct.  Any attempt to use something
+which isn't knowable until run-time is a fatal error.  Thus, this cannot
+be used within the scope of C<use locale> (or the L</C<E<sol>l>> regex
+modifier).  Any L<user-defined property|perlunicode/"User-Defined
+Character Properties"> used must be already defined by the time the
+regular expression is compiled.
+
+A regular expression using this construct that otherwise would compile
+using L</C<E<sol>d>> rules will instead use L</C<E<sol>u>>.
+
+The L</C<E<sol>x>> processing within this class is an extended form.
+Besides the characters that are considered white space in normal C</x>
+processing, there are 5 others, recommended by the Unicode standard:
+
+    U+0085 NEXT LINE
+    U+200E LEFT-TO-RIGHT MARK
+    U+200F RIGHT-TO-LEFT MARK
+    U+2028 LINE SEPARATOR
+    U+2029 PARAGRAPH SEPARATOR 
+
+Note that skipping white space applies only to the interior of this
+construct.  There must not be any space between any of the characters
+that form the initial C<(?[>.  Nor may there be space between the
+closing C<])> characters.
+
+Due to the way that Perl parses things, your parentheses and brackets
+need to be balanced, even including comments.
 
 =back
 
