--- a/pod/perlunicode.pod
+++ b/pod/perlunicode.pod
@@ -979,7 +979,7 @@ Level 1 - Basic Unicode Support
  RL1.1   Hex Notation                     - done          [1]
  RL1.2   Properties                       - done          [2][3]
  RL1.2a  Compatibility Properties         - done          [4]
- RL1.3   Subtraction and Intersection     - MISSING       [5]
+ RL1.3   Subtraction and Intersection     - experimental  [5]
  RL1.4   Simple Word Boundaries           - done          [6]
  RL1.5   Simple Loose Matches             - done          [7]
  RL1.6   Line Boundaries                  - MISSING       [8][9]
@@ -1005,7 +1005,9 @@ supports not only minimal list, but all Unicode character properties (see Unicod
 
 =item [5]
 
- Can use the following to emulate set operations:
+The experimental feature in v5.18 "(?[...])" accomplishes this.  See
+L<perlre/(?[ ])>.  If you don't want to use an experimental feature,
+you can use one of the following:
 
 =over 4
 
